# pyubxutils38

./: README.md  pyproject.toml
src/pynmeagps/: nmeahelpers.py  nmeamessage.py  nmeareader.py
src/pyubxutils/: __init__.py  ubxload.py  ubxreader.py  ubxsave.py  ubxtypes_core.py
